# Rust-Ai-Agent---Deepseek

./: .gitignore  Cargo.toml  README.md  UPDATE.md  agent_memory.json  arahan.md  architecture.md  demo_memory.json  function_calls>  memory.json  rules1.md  why.md
characters/: academic_researcher.json  coding_ninja.json  dadang.json  masterchef_scientist.json  nova_ai.json  sample_character.json  simple_assistant.json  startup_founder.json  test_profile.json
data/: knowledge_base.json
examples/: mod.rs
personality/: mod.rs  personality.rs
src/: completion.rs  lib.rs  main.rs  mod.rs  personality.rs
src/commands/: character.rs  mod.rs  system.rs  twitter.rs  web.rs
src/database/: mod.rs
src/knowledge_base/: knowledge_base.rs
src/learning/: mod.rs
src/memory/: long_term.rs  mod.rs  short_term.rs  tests.rs
src/providers/: deepseek.rs  mod.rs
src/providers/deepseek/: deepseek.rs
src/providers/twitter/: composer.rs  conversation.rs  manager.rs  mod.rs  scheduler.rs  twitbrain.rs
src/providers/web_crawler/: crawler.rs  crawler_manager.rs  crawler_manager.rs.bak  mod.rs  new_crawler.rs
