[package]
name = "rust-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
tokio = { version = "1", features = ["full"] }     # Async runtime
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0"                                # For working with JSON
dotenv = "0.15"                                   # For loading environment variables
thiserror = "1.0"                                 # For custom error handling
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
colored = "2.0"
rusqlite = { version = "0.29", features = ["bundled"] } # SQLite database
tokio-rusqlite = "0.4"                           # Async SQLite support
chrono = { version = "0.4", features = ["serde"] } # Date and time support
